fixed safari layout issues

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -99,8 +99,7 @@ h2 {
 #strains li {
   margin: 3px;
   background-color: #f5f5f5;
-  min-width: 280px;
-  width: 30%;
+  width: 280px;
   float: left;
   overflow: hidden;
 }
